<resources>
    <string name="app_name">Task Demo</string>

    <string name="unable_to_perform_this_action">Unable to perform this action!</string>

    <string name="something_went_wrong_try_later">Something went wrong! try again later.</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="check_your_internet">Please check your internet connection!</string>
    <string name="check_your_internet_with_emoji">⚠️ Please check your internet connection!</string>
    <string name="you_are_not_connected_to_the_internet">You are not connected to the internet</string>
    <string name="no_internet_des_1">Uh-oh! It looks like you\'re not connected to the internet right now. Please check your internet connection!</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="you_are_offline_showing_limited_content">You\'re offline! Showing limited content.</string>
    <string name="session_expired_login_again">Session expired! Please log in again.</string>

    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="type_something">Type Something</string>
    <string name="hey_wait">Hey Wait!</string>
    <string name="confirm">Confirm</string>
    <string name="changes_will_be_lost">The changes will be lost</string>
    <string name="reset_to_defaults_confirmation">Reset all settings to default?</string>
    <string name="enter_title">Enter Title</string>
    <string name="cancel">Cancel</string>

    <string name="links">Links</string>
    <string name="dashboard">Dashboard</string>
    <string name="courses">Courses</string>
    <string name="campaigns">Campaigns</string>
    <string name="profile">Profile</string>

    <string name="total_clicks">Total Clicks</string>
    <string name="top_location">Top Location</string>
    <string name="top_source">Top Source</string>
    <string name="top_links">Top Links</string>
    <string name="recent_links">Recent Links</string>
    <string name="favorite_links">Favorite Links</string>
    <string name="clicks">Clicks</string>
    <string name="view_analytics">View Analytics</string>
    <string name="view_all_links">View All Links</string>
    <string name="talk_with_us">Talk with us</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="copied_to_clipboard">Copied to clipboard.</string>

    <string name="courses_overview">Courses Overview</string>
    <string name="campaign_overview">Campaigns Overview</string>
    <string name="profile_overview">Profile Overview</string>
    <string name="create_description">Let\'s create something fun!</string>
    <string name="overview">Overview</string>

    <string-array name="english_week_string_array">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id felis turpis.</string>
    <string name="lorem_large" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pellentesque lorem in molestie rhoncus. Ut posuere sem fermentum justo faucibus, non imperdiet nisl facilisis. Maecenas in nunc scelerisque, suscipit neque nec, placerat nibh. Vivamus dapibus, urna id tincidunt interdum, risus sapien molestie ex, eget gravida diam diam in augue. Pellentesque imperdiet turpis ut lectus efficitur scelerisque vitae quis massa. Etiam vestibulum ipsum ut sem suscipit, sed sollicitudin ipsum pellentesque. Proin euismod nec diam in maximus. Integer vitae bibendum mi. Aenean vitae efficitur metus. Aenean sit amet enim urna. Donec eleifend in nisl id rutrum. In magna quam, eleifend ut tellus in, euismod interdum nisi. In ac dolor orci.</string>
    <string name="content_description_options">Options</string>
    <string name="content_description_app_info">Application Info</string>
    <string name="content_description_send_message">Send Message</string>
    <string name="content_description_receipt_status_indicator">Message Receipt Status Indicator</string>
    <string name="content_description_add">Add</string>
    <string name="content_description_create">Create</string>
    <string name="content_description_settings">Settings</string>
    <string name="type_a_message">Type a message</string>
</resources>