<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@id/dashboard_graph"
        android:title="@string/links"
        android:enabled="true"
        android:icon="@drawable/ic_link_outline"
        app:showAsAction="withText" />

    <item android:id="@id/courses_graph"
        android:title="@string/courses"
        android:enabled="true"
        android:icon="@drawable/ic_book_outline"
        app:showAsAction="withText" />

    <item android:id="@id/create_graph"
        android:title=""
        android:enabled="false"
        android:icon="@null"
        app:showAsAction="never" />

    <item android:id="@id/campaigns_graph"
        android:title="@string/campaigns"
        android:enabled="true"
        android:icon="@drawable/ic_announce_outline"
        app:showAsAction="withText" />

    <item android:id="@id/profile_graph"
        android:title="@string/profile"
        android:enabled="true"
        android:icon="@drawable/ic_account_outline"
        app:showAsAction="withText" />

</menu>